--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
+  "homepage": "trybetunes/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
